add hero and platform

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Phaser 3 TypeScript Starter</title>
+    <title>Square</title>
     <meta charset="utf-8" />
     <style>
       body {
         margin: 0;
+        background-color: #000;
       }
     </style>
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
-    <div id="game"></div>
+    <div id="game" style="max-width: 800px; margin: 0 auto"></div>
   </body>
 </html>
